fix overflow

--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 button{
-    @apply bg-slate-200 rounded-full w-12 h-12 shadow-md ;
+    @apply bg-slate-200 hover:scale-95 transition-all rounded-2xl min-w-12 min-h-12 shadow-md  flex items-center justify-center text-stone-500 ;
+}
+
+body{
+    font-family: "Noto Serif", serif;
 }
